data/derived/sp14/progs/unify/prog0705.ml.out
Characters 112-113:
  else wwhile (f, x);;
                  ^
Error: This expression has type bool -> 'a
       but an expression was expected of type bool
